--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/blogDB
-JWT_SECRET=jeevankumar123
+MONGO_URI=mongodb+srv://jeevan:jeevankumar123@cluster0.t0xdemk.mongodb.net/blogdb?retryWrites=true&w=majority
+JWT_SECRET=jeevankumar08
