--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://jeevan:jeevankumar123@cluster0.t0xdemk.mongodb.net/blogdb?retryWrites=true&w=majority
-JWT_SECRET=jeevankumar08
+JWT_SECRET=jeevankumar08 //wait
